tests/characterization/snapshots/characterization__backend_env__env_root_mismatch.snap
---
source: tests/characterization/main.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: Current directory does not match env_root.
env_root = <TEST_ROOT>/elsewhere
current  = <TEST_ROOT>/work
--- end ---
