tests/characterization/snapshots/characterization__backend_env__missing_install_root.snap
---
source: tests/characterization/main.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: invalid .metadata: missing install_root.
--- end ---
